# rust_manga_impression_maker

./: .env  .gitignore  Cargo.toml
migrations/: 1_initial.sql
shared/: Cargo.toml
shared/src/: types.rs
src/: cascade_delete.rs  data_storage.rs  main.rs  manga_group_export.rs  manga_ui.rs  template.html  types.rs
webserver/: Cargo.toml
webserver/src/: lib.rs
