[package]
name = "manga_impression"
version = "1.0.5"
edition = "2021"
description = "A GUI to help write small impressions of something (biased towards manga)"
license = "MIT"
keywords = ["egui", "manga"]
categories = ["template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
rfd = { version = "0.11" }
egui = { version = "0.22" }
eframe = { version = "0.22" }
anyhow = "1.0"
tokio = { version = "1.29", features = ["full"] }
chrono = { version = "0.4" }
dotenvy = { version = "0.15" }
crossbeam = { version = "0.8" }
async-trait = { version = "0.1" }
uuid = { version = "1.4", features = ["v4"] }
image = { version = "0.24" }
arboard = { version = "3.2" }
handlebars = { version = "4.3" }
